# InvoiceFlow

./: .gitignore  README.md  commits_log.txt  make_commits.ps1
contracts/: Cargo.toml  deploy.ps1
contracts/escrow_settlement/: Cargo.toml
contracts/escrow_settlement/src/: lib.rs
contracts/invoice_registry/: Cargo.toml
contracts/invoice_registry/src/: lib.rs
contracts/invoice_token/: Cargo.toml
contracts/invoice_token/src/: lib.rs
contracts/reputation_score/: Cargo.toml
contracts/reputation_score/src/: lib.rs
contracts/secondary_market/: Cargo.toml
contracts/secondary_market/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/marketplace/: page.tsx
frontend/src/app/submit/: page.tsx
frontend/src/app/verify/[id]/: page.tsx
frontend/src/components/: CountUp.tsx  Header.tsx  ReputationRing.tsx  Starfield.tsx  Toast.tsx
frontend/src/lib/: soroban.ts
