[workspace]
resolver = "2"
members = [
    "invoice_registry",
    "reputation_score",
    "invoice_token",
    "escrow_settlement",
    "secondary_market",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
